locust/locust-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust-giropops
spec:
  type: ClusterIP
  selector:
    app: locust-giropops
  ports:
    - name: tcp-locust
      protocol: TCP
      port: 8089
      targetPort: 8089
